Manifest unique id changed to GUID.
SMAPI examples say that it should be <project name> but most of the mods seem to use GUID which makes more sense.

--- a/StardewRegeneration/manifest.json
+++ b/StardewRegeneration/manifest.json
@@ -8,6 +8,6 @@
       "Build": ""
    },
    "Description": "Adds configurable health and stamina regeneration.",
-   "UniqueID": "StardewRegeneration",
+   "UniqueID": "2b2a296a-a155-48f3-afb8-c02c27923aff",
    "EntryDll": "StardewRegeneration.dll"
 }
